--- a/index.html
+++ b/index.html
@@ -361,12 +361,28 @@
                         <span></span>
                         <span></span>
                             <div class="gallery_img">
-                                <img src="./assets/assets/HAPPINESS.png" alt="gallery_blog">
+                                <img src="./assets/img_compres/New-Assement-4.1.jpg" alt="gallery_blog">
                             </div>
                     <div class="gallery_text">
-                        <h1>Performance Task 3.2</h1>
-                      <a href="" class="gallery_title"> Lorem ipsum dolor sit amet.</a>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium voluptas quaerat mollitia soluta doloremque commodi quas recusandae delectus natus expedita accusamus labore neque, nam, nisi culpa. Voluptatibus at architecto autem nisi facere, id consectetur suscipit, corporis minus enim animi accusamus.</p>
+                        <h1>Performance Task 4.1</h1>
+                      <a href="" class="gallery_title"> Future that One day I want to see.</a>
+                        <p>It's nice to we keep improving our technology to help us in the future but also the thing that I realy want to see is our Technology and Environment merge as one that they exist in such a harmony without sacrificing either both of them.</p>
+                    </div>
+                    </div>
+
+                    <!-- ========== GALLERY 4 ========== -->
+                       <div class="gallery_box">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                            <div class="gallery_img">
+                                <img src="./assets/img_compres/Assement-4_2jpg.jpg" alt="gallery_blog">
+                            </div>
+                    <div class="gallery_text">
+                        <h1>Performance Task 4.2</h1>
+                      <a href="" class="gallery_title">Cause and Effect of Climate Change</a>
+                        <p>It's nice to we keep improving our technology to help us in the future but also the thing that I realy want to see is our Technology and Environment merge as one that they exist in such a harmony without sacrificing either both of them.</p>
                     </div>
                     </div>
                     </div>
