--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                                  In this way the tomatoes could ripen on the stems all the way and didn't have to be harvested too earl <br><small>https://en.wikipedia.org/gmo/tomato</small></p>
                         </div>
                         <div class="blog_card">
-                            <img src="./assets/assets/banana.jpg" alt="">
+                            <img src="./assets/assets/banana_modi.jpg" alt="">
                             <h2>Genetically Modified Banana</h2>
                             <p>&nbsp;&nbsp; The Modified bananas were developed in the 1990s, including protoplast electroporation (Sági et al., 1994), particle bombardment (Sági et al., 1995), and Agrobacterium-mediated transformation.<br>
                                 &nbsp;&nbsp;Transgenic banana offer environmental benefits by reduced spraying of pesticides on disease and pest resistant plants, 
