--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                                 include introducing pest resistance, tweaking the amounts of certain chemicals produced by the plant, and to prevent browning or
                                  bruising of the tubers. <br>
                                  Some GMO potatoes were developed to resist insect pests and disease. In addition, some GMO potato varieties have been developed to resist bruising and browning that can occur when potatoes are packaged, stored, and transported, or even cut in your kitchen.
-                                <br> <small>https://en.wikipedia.org/wiki/Genetically_modified_potato.com</small></p>
+                                <br> <small>https://en.wikipedia.org/wiki</small></p>
                         </div>
                         
                         <div class="blog_card">
