--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                     <div class="gallery_text">
                         <h1>Performance Task 4.1</h1>
                       <a href="" class="gallery_title"> Future that One day I want to see.</a>
-                        <p>"Climate change is a global challenge that demands urgent action from all of us. Let's join hands and work together to protect our planet, preserve its beauty, and secure a sustainable future for generations to come."</p>
+                        <p>"It's nice to we keep improving our technology to help us in the future but also the thing that I realy want to see is our Technology and Environment merge as one that they exist in such a harmony without sacrificing either both of them."</p>
                     </div>
                     </div>
 
@@ -382,7 +382,7 @@
                     <div class="gallery_text">
                         <h1>Performance Task 4.2</h1>
                       <a href="" class="gallery_title">Cause and Effect of Climate Change</a>
-                        <p>It's nice to we keep improving our technology to help us in the future but also the thing that I realy want to see is our Technology and Environment merge as one that they exist in such a harmony without sacrificing either both of them.</p>
+                        <p>"Climate change is a global challenge that demands urgent action from all of us. Let's join hands and work together to protect our planet, preserve its beauty, and secure a sustainable future for generations to come."</p>
                     </div>
                     </div>
                     </div>
